# RNA_con_MILP_y_metaheuristicas

./: .env  .env.example  .gitattributes  .gitignore  README.md
Code/: BO_GP_torch.py  NN_framework.py  SA_torch.py  bcw_cv.py  computacion 122_9.py  custom_training.py  cv.py  data_treatment.py  dump.py  generate_model.py  gurobi_generator.cpp  gurobi_sol_to_tensor.py  kardex_treatment.py  lnn.py  nnlib.py  pandas_utility.py  programa  programa.sol  rna_random_generator.py  test.py  testing.py  weights_analysis.py
Data/Breast Cancer/: PReLU.csv  arch.csv  best_all_PReLU.csv  best_all_bias.csv  best_all_prediction.csv  best_all_weights.csv  best_test_PReLU.csv  best_test_arch.csv  best_test_bias.csv  best_test_digits.csv  best_test_precision.csv  best_test_prediction.csv  best_test_weights.csv  best_train_PReLU.csv  best_train_bias.csv  best_train_prediction.csv  best_train_weights.csv  bias.csv  digits.csv  features.csv  gb_w.csv  precision.csv  prediction.csv  target.csv  weights.csv
Data/Breast Cancer Winsconsin (Diagnostic)/: best.onnx  best.pt  worst.onnx  worst.pt
Data/Test/: gurobi_weights.data  model.lp  model_arch.data  model_gm.data  random_bias.data  random_cases.data  random_digits.data  random_hidden_arch.data  random_labels.data  random_precision.data  test_database.data  test_hidden_arch.data  (+1 more)
code/: chromosome.py
src/: BO_GP_torch.py  SA_torch.py  requirements.txt
src/gurobi/: CMakeLists.txt  FindGUROBI.cmake  batchgen.py  compare.py  execute_gurobi.sh  files.py  grb_nn.cpp  gurobi_generator.cpp  interface.py  model.py  splitter.py
(+552 files in other folders)
